--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <link rel="stylesheet" href="index.css">
     </head>
-    <body>
+    <body id="main-body">
         <header>
             <img src="images/logo.png" alt="Oldagram Logo" id="oldagram-logo">
             <img src="images/user-avatar.jpg" alt="User Avatar" id="user-avatar">
         </header>
         
-        <section>
+        <!-- <section>
             <div class="user-info">
                 <img src="images/avatar-vangogh.jpg" alt="avatar of vangogh" class="user-avatar" >
                 <div class="user-details">
@@ -29,7 +29,7 @@
                 <p class="comment"><span class="commenter">vincey1853</span> just took a few mushrooms lol</p>
             </div>
             <div class="blank-space"></div>
-        </section>
+        </section> -->
         <script src="index.js"></script>
     </body>
 </html>
